--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -296,6 +296,7 @@ select {
 input[type="checkbox"] {
   -webkit-appearance: none;
   appearance: none;
+  display: block;
   position: relative;
   width: 4rem;
   height: 2.5rem;
@@ -303,9 +304,10 @@ input[type="checkbox"] {
   background-color: #000;
   margin: 0;
 }
-/* line 77, ../sass/_forms.scss */
+/* line 78, ../sass/_forms.scss */
 input[type="checkbox"]:before {
   content: '';
+  display: block;
   position: absolute;
   left: 0.25rem;
   top: 0.25rem;
@@ -316,23 +318,23 @@ input[type="checkbox"]:before {
   background: rgba(255, 255, 255, 0) url("../img/toggle-icons.svg") left center no-repeat;
   transition: all 0.2s ease;
 }
-/* line 90, ../sass/_forms.scss */
+/* line 92, ../sass/_forms.scss */
 input[type="checkbox"]:checked:before {
   left: 1.75rem;
   background-color: white;
   background-position: right center;
 }
-/* line 96, ../sass/_forms.scss */
+/* line 98, ../sass/_forms.scss */
 input[type="checkbox"]:focus {
   outline: none;
 }
 
-/* line 101, ../sass/_forms.scss */
+/* line 103, ../sass/_forms.scss */
 a.btn {
   text-decoration: none;
 }
 
-/* line 105, ../sass/_forms.scss */
+/* line 107, ../sass/_forms.scss */
 button,
 input[type="submit"] {
   font-family: "Alegreya Sans", sans-serif;
